app-test/testdata/typesystem/neg/type-assertion-algebraic-type-to-any-type/src/assert.cal
namespace assert:
    type T : (int a, bool b) end
    actor AlgebraicTypeToInt() ==> int OUT:
        do
            OUT <-- (T(1, false) :: int); // error
        end
    end
end